# Counter-Strike-Server-GUI

./: .gitignore  AGENTS.md  build-appimage.sh  build-flatpak.sh  cs-server-manager.desktop  io.github.wheat32.CSServerManager.yml  io.github.wheat32.ProtonVPNQt.yml  proton-vpn-qt-app.desktop
.github/workflows/: ci.yml  release.yml
appimage/: AppRun  fetch-cli-debs.py
src/: CMakeLists.txt  appConfig.cpp  appConfig.h  debug.h  firewallChecker.cpp  firewallChecker.h  firewallHelpDialog.h  main.cpp  mainWindow.cpp  mainWindow.h  resources.qrc  serverFiles.h  serverManager.cpp  serverManager.h  serverSetupDialog.cpp  serverSetupDialog.h  serverUtils.h  style_dark.qss  style_light.qss  themeManager.cpp  themeManager.h  uiHelpers.h  version.json
src/cli/: appImageUtils.h  flatpakUtils.h  platformUtils.h
src/dialogs/: aboutDialog.cpp  aboutDialog.h  botEditDialog.cpp  botEditDialog.h  errorDetailsDialog.cpp  errorDetailsDialog.h  gameServerTypeDialog.cpp  gameServerTypeDialog.h  updateAvailableDialog.cpp  updateAvailableDialog.h  whatsNewDialog.cpp  whatsNewDialog.h
src/pages/: appSettingsPage.cpp  appSettingsPage.h  botsPage.cpp  botsPage.h  debugPage.cpp  debugPage.h  mapsPage.cpp  mapsPage.h  serverControlsPage.cpp  serverControlsPage.h  serverPage.cpp  serverPage.h  serverSettingsPage.cpp  serverSettingsPage.h
src/widgets/: elidaLabel.h  htmlHighlighter.h  infoBanner.h  numberSpinner.h  pickerBase.h  pickerDrawer.cpp  pickerDrawer.h  starButton.h  svgBanner.h  toastNotification.h  toggleSwitch.cpp  toggleSwitch.h  toggleWithStatus.h
